--- a/maps/maps.html
+++ b/maps/maps.html
@@ -42,32 +42,40 @@
         "channel": "TEMP",
         "color": "Red",
         "dataset": [
-            {
-                "lon": -3.703548,
-                "lat": 40.417204,
-                "value": 20.5,
-                "description": "Temperature [°C] in Madrid"
-            },
-            {
-                "lon": -0.075906,
-                "lat": 51.508319,
-                "value": 16,
-                "description": "Temperature [°C] in London"
-            },
-            {
-                "lon": 2.34294,
-                "lat": 48.859271,
-                "value": 19.7,
-                "description": "Temperature [°C] in Paris"
-            },
-            {
-                "lon": 13.402786,
-                "lat": 52.517987,
-                "value": 10.8,
-                "description": "Temperature [°C] in Berlin"
-            }
-        ]
-    }
+        {
+            "channel": "TEMP",
+            "dataset": [
+                {
+                    "lon": -3.703548,
+                    "lat": 40.417204,
+                    "value": 20.5,
+                    "color": "Blue",
+                    "description": "Temperature [°C] in Madrid"
+                },
+                {
+                    "lon": -0.075906,
+                    "lat": 51.508319,
+                    "value": 16,
+                    "color": "Yellow",
+                    "description": "Temperature [°C] in London"
+                },
+                {
+                    "lon": 2.34294,
+                    "lat": 48.859271,
+                    "value": 19.7,
+                    "color": "Red",
+                    "description": "Temperature [°C] in Paris"
+                },
+                {
+                    "lon": 13.402786,
+                    "lat": 52.517987,
+                    "value": 10.8,
+                    "color": "Red",
+                    "description": "Temperature [°C] in Berlin"
+                }
+            ]
+        }
+    ]    
 ]</code>
   </p>
 </script>
