--- a/maps/maps.html
+++ b/maps/maps.html
@@ -48,30 +48,34 @@
                 {
                     "lon": -3.703548,
                     "lat": 40.417204,
+                    "description": "Temperature in Madrid"                    
                     "value": 20.5,
+                    "unit": "°C",
                     "color": "Blue",
-                    "description": "Temperature [°C] in Madrid"
                 },
                 {
                     "lon": -0.075906,
                     "lat": 51.508319,
+                    "description": "Temperature in London"                    
                     "value": 16,
+                    "unit": "°C",
                     "color": "Yellow",
-                    "description": "Temperature [°C] in London"
                 },
                 {
                     "lon": 2.34294,
                     "lat": 48.859271,
+                    "description": "Temperature in Paris"
                     "value": 19.7,
+                    "unit": "°C",
                     "color": "Red",
-                    "description": "Temperature [°C] in Paris"
                 },
                 {
                     "lon": 13.402786,
                     "lat": 52.517987,
+                    "description": "Temperature in Berlin"                    
                     "value": 10.8,
-                    "color": "Red",
-                    "description": "Temperature [°C] in Berlin"
+                    "unit": "°C",
+                    "color": "Red",                    
                 }
             ]
         }
