--- a/maps/maps.html
+++ b/maps/maps.html
@@ -9,8 +9,8 @@
     <input type="text" id="node-input-path" placeholder="Map path">
   </div>
   <div class="form-row">
-    <label for="node-input-charttitle"><i class="fa"></i>Title</label>
-    <input type="text" id="node-input-charttitle" placeholder="Map title">
+    <label for="node-input-maptitle"><i class="fa"></i>Title</label>
+    <input type="text" id="node-input-maptitle" placeholder="Map title">
   </div>          
 </script>
 
